Flash-build: modified for use with non-windows (mainly linux)